--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "googletest"]
-	path = third-party/googletest
+	path = PB/third-party/googletest
 	url = https://github.com/google/googletest
 	branch = v1.14.0
