build: Add c++20 flag to library, add include command.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.27)
 
+SET(CMAKE_CXX_FLAGS "-std=c++20")
+
 project(pblib)
 
 add_library(pblib SHARED
@@ -12,5 +14,7 @@ set_target_properties(pblib PROPERTIES LINKER_LANGUAGE CXX)
 add_subdirectory(third-party/googletest)
 
 add_executable(PBTests tests/testLogLevel.cpp )
+
+target_include_directories(PBTests PRIVATE include)
 
 target_link_libraries(PBTests gtest gtest_main)
