--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -3,6 +3,14 @@ cmake_minimum_required(VERSION 3.27)
 set(CMAKE_CXX_FLAGS "-std=c++20")
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
+
+option(STATIC_CHECK "Statically check the program." OFF)
+
+if (STATIC_CHECK)
+    message("Static check ON")
+    set(CMAKE_CXX_CLANG_TIDY "clang-tidy;-checks=*")
+endif()
+
 project(pblib)
 
 add_library(pblib SHARED
