build: Add common-components include and link.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -38,5 +38,6 @@ add_subdirectory(common-components)
 add_executable(PBTests tests/testLogLevel.cpp)
 
 target_include_directories(PBTests PRIVATE include)
+target_include_directories(PBTests PRIVATE common-components/include)
 
-target_link_libraries(PBTests gtest gtest_main )
+target_link_libraries(PBTests gtest gtest_main common-components)
