--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = PB/third-party/googletest
 	url = https://github.com/google/googletest
 	branch = v1.14.0
+[submodule "PB/third-party/exiv2"]
+	path = PB/third-party/exiv2
+	url = https://github.com/Exiv2/exiv2.git
+	branch = v0.28.0
