feat: Add FileMapper.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -26,11 +26,13 @@ endif()
 project(pblib)
 
 add_library(pblib SHARED
+    include/FileMapper.h
     include/PBLog.h
     include/MetadataReader.h
     include/NodeData.h
     include/util/Traits.h
 
+    src/FileMapper.cpp
     src/MetadataReader.cpp
     src/NodeData.cpp
 )
