build: Add new boost dependencies to CMake.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -40,6 +40,13 @@ add_library(pblib SHARED
 )
 
 target_include_directories(pblib PRIVATE include)
+target_include_directories(pblib PRIVATE third-party/boost-extract)
+target_include_directories(pblib PRIVATE third-party/boost-extract/libs/uuid/include)
+target_include_directories(pblib PRIVATE third-party/boost-extract/libs/detail/include)
+target_include_directories(pblib PRIVATE third-party/boost-extract/libs/random/include)
+target_include_directories(pblib PRIVATE third-party/boost-extract/libs/integer/include)
+target_include_directories(pblib PRIVATE third-party/boost-extract/libs/tti/include)
+target_include_directories(pblib PRIVATE third-party/boost-extract/libs/function_types/include)
 
 set_target_properties(pblib PROPERTIES LINKER_LANGUAGE CXX)
 
