fix: Add the new config file, add movement of the common classes.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -14,6 +14,7 @@ set(LOG_LEVEL_STRING_LIST None Debug Info Warning Error)
 
 if (LOG_LEVEL IN_LIST LOG_LEVEL_STRING_LIST)
     configure_file(Config.h.in ../include/Config.h)
+    configure_file(ConfigDependants.h.in ../include/ConfigDependants.h)
 else()
     message(FATAL_ERROR "${LOG_LEVEL} Not in the list of levels ${LOG_LEVEL_STRING_LIST}" )
 endif()
@@ -26,11 +27,11 @@ endif()
 project(pblib)
 
 add_library(pblib SHARED
+    include/common/Log.h
     include/Config.h
     include/DataNode.h
     include/Error.h
     include/FileMapper.h
-    include/Log.h
     include/MetadataReader.h
     include/FileData.h
     include/FolderData.h
@@ -54,7 +55,6 @@ target_include_directories(pblib PRIVATE third-party/boost-extract/libs/function
 set_target_properties(pblib PROPERTIES LINKER_LANGUAGE CXX)
 
 add_subdirectory(third-party/googletest)
-add_subdirectory(common-components)
 add_subdirectory(third-party/exiv2)
 
 include_directories(${CMAKE_BINARY_DIR})
@@ -62,9 +62,8 @@ include_directories(${CMAKE_BINARY_DIR})
 add_executable(pbtests tests/testLogLevel.cpp tests/TestErrors.cpp tests/TestThirdPartyLinks.cpp)
 
 target_include_directories(pbtests PRIVATE include)
-target_include_directories(pbtests PRIVATE common-components/include)
 target_include_directories(pbtests PRIVATE third-party/exiv2/include)
 target_include_directories(pbtests PRIVATE third-party/boost-extract)
 target_include_directories(pbtests PRIVATE third-party/boost-extract/libs/uuid/include)
 
-target_link_libraries(pbtests gtest gtest_main common-components exiv2lib)
+target_link_libraries(pbtests gtest gtest_main exiv2lib)
