build: Build tests only if the debug log level is active.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -66,19 +66,21 @@ add_subdirectory(third-party/exiv2)
 
 include_directories(${CMAKE_BINARY_DIR})
 
-add_executable(pbtests tests/testLogLevel.cpp
-    tests/TestErrors.cpp
-    tests/TestThirdPartyLinks.cpp
-    tests/TestFilesMap.cpp)
+if (LOG_LEVEL MATCHES Debug)
+    add_executable(pbtests tests/testLogLevel.cpp
+        tests/TestErrors.cpp
+        tests/TestThirdPartyLinks.cpp
+        tests/TestFilesMap.cpp)
 
-target_include_directories(pbtests PRIVATE include
-    third-party/exiv2/include
-    third-party/boost-extract
-    third-party/boost-extract/libs/uuid/include
-    third-party/boost-extract/libs/detail/include
-    third-party/boost-extract/libs/random/include
-    third-party/boost-extract/libs/integer/include
-    third-party/boost-extract/libs/tti/include
-    third-party/boost-extract/libs/function_types/include)
+    target_include_directories(pbtests PRIVATE include
+        third-party/exiv2/include
+        third-party/boost-extract
+        third-party/boost-extract/libs/uuid/include
+        third-party/boost-extract/libs/detail/include
+        third-party/boost-extract/libs/random/include
+        third-party/boost-extract/libs/integer/include
+        third-party/boost-extract/libs/tti/include
+        third-party/boost-extract/libs/function_types/include)
 
-target_link_libraries(pbtests pblib gtest gtest_main exiv2lib)
+    target_link_libraries(pbtests pblib gtest gtest_main exiv2lib)
+endif()
