--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -50,6 +50,9 @@ jobs:
     - name: Fetch Submodules
       run: git submodule update --init --recursive
 
+    - name: Install inih
+      run: sudo apt-get install -y inih
+
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
