--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.27)
 
-set(CMAKE_CXX_FLAGS "-std=c++20")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+if (WIN32)
+    add_compile_options(/std:c++20)
+    add_compile_options(/EHsc)
+else()
+    set(CMAKE_CXX_FLAGS "-std=c++20")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+endif()
 
 option(STATIC_CHECK "Statically check the program." OFF)
 option(LOG_LEVEL "Log level." OFF)
@@ -36,7 +41,7 @@ project(pblib)
 
 add_subdirectory(third-party/magic_enum)
 
-add_library(pblib SHARED
+add_library(pblib STATIC
     include/common/Log.h
     ${CMAKE_CURRENT_BINARY_DIR}/include/Config.h
     ${CMAKE_CURRENT_BINARY_DIR}/include/ConfigDependants.h
