--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -72,7 +72,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
-        -DCMAKE_TOOLCHAIN_FILE=..\PB\third-party\windows\vcpkg-export-20230822-115352\scripts\buildsystems\vcpkg.cmake
+        -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}"/PB/third-party/windows/vcpkg-export-20230822-115352/scripts/buildsystems/vcpkg.cmake"
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
