--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -81,7 +81,9 @@ add_subdirectory(third-party/exiv2)
 include_directories(${CMAKE_BINARY_DIR})
 
 if (LOG_LEVEL MATCHES Debug)
-    add_executable(pbtests tests/TestErrors.cpp
+    add_executable(pbtests 
+        tests/TestComparator.cpp
+        tests/TestErrors.cpp
         tests/TestThirdPartyLinks.cpp
         tests/TestFilesMap.cpp)
 
