fix: Include boost in the right way.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -40,6 +40,7 @@ endif()
 project(pblib)
 
 add_subdirectory(third-party/magic_enum)
+add_subdirectory(third-party/boost-extract/libs/program_options)
 
 add_library(pblib STATIC
     include/common/Log.h
@@ -55,18 +56,6 @@ add_library(pblib STATIC
     src/FileMapper.cpp
     src/FileComparator.cpp
     src/MetadataReader.cpp
-
-    third-party/boost-extract/libs/program_options/src/parsers.cpp
-    third-party/boost-extract/libs/program_options/src/variables_map.cpp
-    third-party/boost-extract/libs/program_options/src/split.cpp
-    third-party/boost-extract/libs/program_options/src/convert.cpp
-    third-party/boost-extract/libs/program_options/src/value_semantic.cpp
-    third-party/boost-extract/libs/program_options/src/options_description.cpp
-    third-party/boost-extract/libs/program_options/src/cmdline.cpp
-    third-party/boost-extract/libs/program_options/src/positional_options.cpp
-    third-party/boost-extract/libs/program_options/src/winmain.cpp
-    third-party/boost-extract/libs/program_options/src/config_file.cpp
-    third-party/boost-extract/libs/program_options/src/utf8_codecvt_facet.cpp
 )
 
 target_include_directories(pblib PUBLIC include
