--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -45,6 +45,12 @@ jobs:
     - name: Fetch Submodules
       run: git submodule update --init --recursive
 
+    - name: Set up Clang
+      uses: egor-tensin/setup-clang@v1
+      with:
+        version: latest
+        platform: x64
+
     - if: matrix.os == 'ubuntu-latest'
       run: sudo apt-get install -y libinih1 libinih-dev
 
