--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -45,11 +45,11 @@ jobs:
     - name: Fetch Submodules
       run: git submodule update --init --recursive
 
-    - name: Set up Clang
-      uses: egor-tensin/setup-clang@v1
+    - name: Install LLVM and Clang
+      uses: KyleMayes/install-llvm-action@v1
       with:
-        version: latest
-        platform: x64
+        version: "16.0.6"
+        directory: ${{ runner.temp }}/llvm
 
     - if: matrix.os == 'macos-latest'
       run: brew install inih
