--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -62,8 +62,8 @@ jobs:
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}"/PB/third-party/osx/vcpkg-export-20230826-011552/scripts/buildsystems/vcpkg.cmake"
-        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+        -DCMAKE_C_COMPILER=$(brew --prefix llvm)/bin/clang
+        -DCMAKE_CXX_COMPILER=$(brew --prefix llvm)/bin/clang++
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -S ${{ github.workspace }}
 
