feat: Add empty EasyPhotoBook.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ PB/include/Config.h
 PB/include/ConfigDependants.h
 .vscode/*
 .commit-check.yml
+windows/EasyPhotoBook/EasyPhotoBook/obj/*
+windows/EasyPhotoBook/.vs/*
