build: Update gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,18 @@ PB/include/Config.h
 .commit-check.yml
 windows/EasyPhotoBook/EasyPhotoBook/obj/*
 windows/EasyPhotoBook/.vs/*
+windows/EasyPhotoBook/EasyPhotoBook/bin/*
+windows/EasyPhotoBook/x64/*
+windows/EasyPhotoBook/packages/*
+windows/EasyPhotoBook/CppAdapter/obj/*
+windows/EasyPhotoBook/CppAdapter/bin/*
+windows/PhotobookUI/packages/*
+windows/PhotobookUI/x64/*
+windows/PhotobookUI/obj/*
+windows/PhotobookUI/_build/*
+windows/PhotobookUI/.vs/*
+windows/CppWinRTProjection/x64/*
+windows/CppWinRTProjection/Generated\ Files/*
+windows/CppProjection/obj/*
+windows/CppProjection/bin/*
+windows/PhotobookUI/bin/*
