feat: Add PhotoBook class.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -54,6 +54,7 @@ add_library(pblib STATIC
     include/ImageSetWriter.h
     include/MetadataReader.h
     include/FileComparator.h
+    include/PhotoBook.h
     include/util/Traits.h
 
     src/ConfigDependants.cpp
@@ -62,6 +63,7 @@ add_library(pblib STATIC
     src/ImageReader.cpp
     src/ImageSetWriter.cpp
     src/MetadataReader.cpp
+    src/PhotoBook.cpp
 )
 
 target_include_directories(pblib PUBLIC include
