--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -48,6 +48,7 @@ add_library(pblib STATIC
     include/common/Log.h
     ${CMAKE_CURRENT_BINARY_DIR}/include/Config.h
     ${CMAKE_CURRENT_BINARY_DIR}/include/ConfigDependants.h
+    include/Context.h
     include/Error.h
     include/Enums.h
     include/FileMapper.h
@@ -59,6 +60,7 @@ add_library(pblib STATIC
     include/util/Timer.h
     include/util/Traits.h
 
+    src/Context.cpp
     src/ConfigDependants.cpp
     src/FileMapper.cpp
     src/FileComparator.cpp
