--- a/windows/CppWinRTProjection/CppWinRTProjection.vcxproj
+++ b/windows/CppWinRTProjection/CppWinRTProjection.vcxproj
@@ -118,21 +118,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Class.h">
-      <DependentUpon>Class.idl</DependentUpon>
+    <ClInclude Include="PhotoBook.h">
+      <DependentUpon>PhotoBook.idl</DependentUpon>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Class.cpp">
-      <DependentUpon>Class.idl</DependentUpon>
+    <ClCompile Include="PhotoBook.cpp">
+      <DependentUpon>PhotoBook.idl</DependentUpon>
     </ClCompile>
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="Class.idl" />
+    <Midl Include="PhotoBook.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CppWinRTProjection.def" />
