--- a/windows/CppWinRTProjection/CppWinRTProjection.vcxproj.filters
+++ b/windows/CppWinRTProjection/CppWinRTProjection.vcxproj.filters
@@ -11,14 +11,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="Class.cpp" />
+    <ClCompile Include="PhotoBook.cpp" />
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="Class.idl" />
+    <Midl Include="PhotoBook.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CppWinRTProjection.def" />
