build: Reorder, format, replace add_subdirectory with find_package.
Don't use the submodules anymore, use only vcpkg.
The installation will be done by the user assuming that there is a known
vcpkg/installed packages version that works.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,11 @@ endif()
 
 add_subdirectory(PB)
 
-add_executable(PhotoBook main.cpp include/MainActivity.h src/ArgsHandler.cpp src/PBArgsListener.cpp)
+add_executable(PhotoBook
+    include/MainActivity.h
+    src/ArgsHandler.cpp
+    src/PBArgsListener.cpp
+    main.cpp)
 
 target_include_directories(PhotoBook PUBLIC PB/include include)
 
