--- a/windows/PhotobookUI/PhotobookUI.csproj
+++ b/windows/PhotobookUI/PhotobookUI.csproj
@@ -44,6 +44,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.0.3" />
 	</ItemGroup>
