--- a/windows/CppProjection/CppProjection.csproj
+++ b/windows/CppProjection/CppProjection.csproj
@@ -5,6 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<CsWinRTEnabled>true</CsWinRTEnabled>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
