feat: Use Converter.

--- a/windows/CppWinRTProjection/CppWinRTProjection.vcxproj.filters
+++ b/windows/CppWinRTProjection/CppWinRTProjection.vcxproj.filters
@@ -13,9 +13,11 @@
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="PhotoBook.cpp" />
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
+    <ClCompile Include="Converter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Converter.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="PhotoBook.idl" />
